--- a/index.html
+++ b/index.html
@@ -1,39 +1,37 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Puffin Colors WebView</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Puffin Colors</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div id="app">
-    <div class="toolbar left">
-      <button class="tool-button active" data-tool="pen">🖊️</button>
-      <button class="tool-button" data-tool="brush">🖌️</button>
-      <button class="tool-button" data-tool="eraser">🧽</button>
-      <button class="tool-button" data-tool="undo">↩️</button>
-      <button class="tool-button" data-tool="save">💾</button>
-      <button class="tool-button" data-tool="smartfill" id="smartFillBtn">🧠</button>
+  <div class="app-container">
+    <div class="tool-panel">
+      <button class="tool-button" id="penTool"><img src="https://img.icons8.com/ios-filled/50/000000/pen.png"/></button>
+      <button class="tool-button" id="brushTool"><img src="https://img.icons8.com/ios-filled/50/000000/paint-brush.png"/></button>
+      <button class="tool-button" id="eraserTool"><img src="https://img.icons8.com/ios-filled/50/000000/eraser.png"/></button>
+      <button class="tool-button" id="undo"><img src="https://img.icons8.com/ios-filled/50/000000/undo.png"/></button>
+      <button class="tool-button" id="save"><img src="https://img.icons8.com/ios-filled/50/000000/save.png"/></button>
+      <button class="tool-button" id="smartFillToggle"><img src="https://img.icons8.com/ios-filled/50/000000/brain.png"/></button>
     </div>
-
-    <div id="drawingArea">
-      <canvas id="drawCanvas"></canvas>
-      <object id="svgImage" type="image/svg+xml" data="Puffin detailed.svg"></object>
+    <div class="canvas-container">
+      <img id="svgImage" src="Puffin detailed.svg" />
+      <canvas id="drawingCanvas"></canvas>
     </div>
-
-    <div class="toolbar right" id="colorPalette">
-      <button class="color-swatch" data-color="#f00" style="background:#f00"></button>
-      <button class="color-swatch" data-color="#0f0" style="background:#0f0"></button>
-      <button class="color-swatch" data-color="#00f" style="background:#00f"></button>
-      <button class="color-swatch" data-color="#ff0" style="background:#ff0"></button>
-      <button class="color-swatch" data-color="#0ff" style="background:#0ff"></button>
-      <button class="color-swatch" data-color="#f0f" style="background:#f0f"></button>
-      <button class="color-swatch" data-color="#000" style="background:#000"></button>
-      <button class="color-swatch" data-color="#fff" style="background:#fff; border:1px solid #ccc"></button>
+    <div class="color-panel">
+      <button class="color-button" style="background-color:#F28B00;"></button>
+      <button class="color-button" style="background-color:#F993A4;"></button>
+      <button class="color-button" style="background-color:#A7D8F2;"></button>
+      <button class="color-button" style="background-color:#4DC4E6;"></button>
+      <button class="color-button" style="background-color:#3DA674;"></button>
+      <button class="color-button" style="background-color:#FFD93B;"></button>
+      <button class="color-button" style="background-color:#2A2A2A;"></button>
+      <button class="color-button" style="background-color:#FFFFFF;"></button>
     </div>
   </div>
-
   <script src="script_enhanced.js"></script>
 </body>
 </html>
